--- a/ATRIM/TP2/TP2-ATRIM-spatial-filtering-sv-2021-2022.ipynb
+++ b/ATRIM/TP2/TP2-ATRIM-spatial-filtering-sv-2021-2022.ipynb
@@ -588,7 +588,6 @@
     "f = os.path.join(SUBDIR, \"moon-blurred.tif\")\n",
     "\n",
     "im = io.imread(f, as_gray=True)\n",
-    "im = im.astype(float)\n",
     "\n",
     "im_sharpened = sharpen(im)\n",
     "plt.imshow(im_sharpened, cmap='gray')\n",
@@ -672,19 +671,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_168833/3134699854.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m \u001b[0mpos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfindTemplate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemplate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_168833/3134699854.py\u001b[0m in \u001b[0;36mfindTemplate\u001b[0;34m(im, template)\u001b[0m\n\u001b[1;32m     24\u001b[0m                     \u001b[0mnum\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mim_mean\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtemplate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mtemplate_mean\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m                     \u001b[0mden_1\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mim_mean\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m                     \u001b[0mden_2\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtemplate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mtemplate_mean\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0mncc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnum\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mden_1\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mden_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
+    "import matplotlib.patches as patches\n",
+    "\n",
     "SUBDIR = os.path.join(IMDIR, \"charlie\")\n",
     "f1 = os.path.join(SUBDIR, \"marche-crop.png\")\n",
     "f2 = os.path.join(SUBDIR, \"charlie-template.jpeg\")\n",
     "\n",
     "im = io.imread(f1, as_gray=True)\n",
-    "im = im.astype('float')\n",
-    "\n",
     "template = io.imread(f2, as_gray=True)\n",
-    "template = template.astype('float')"
+    "\n",
+    "def findTemplate(im, template):\n",
+    "    \"\"\"retourne la position du template dans l'image\"\"\"\n",
+    "    h_target, w_target = im.shape\n",
+    "    h_template, w_template = template.shape\n",
+    "    \n",
+    "    max_ncc = 0\n",
+    "    template_mean = np.sum(template) / (h_template * w_template)\n",
+    "    for u in range(h_target - h_template):\n",
+    "        for v in range(w_target - w_template):\n",
+    "            im_mean = sum(im[u:u+h_template, v+w_template]) / (h_template * w_template)\n",
+    "                        \n",
+    "            num = den_1 = den_2 = 0\n",
+    "            for i in range(h_template):\n",
+    "                for j in range(w_template):\n",
+    "                    num += (im[u+i, v+j] - im_mean) * (template[i, j] - template_mean)\n",
+    "                    den_1 += (im[u+i, v+j] - im_mean) ** 2\n",
+    "                    den_2 += (template[i, j] - template_mean) ** 2\n",
+    "            \n",
+    "            ncc = num / np.sqrt(den_1 * den_2)\n",
+    "            \n",
+    "            if ncc > max_ncc:\n",
+    "                res = (u, v)\n",
+    "                max_ncc = ncc\n",
+    "                \n",
+    "    return res\n",
+    "\n",
+    "pos = findTemplate(im, template)\n",
+    "print(pos)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.imshow(im, cmap='gray')\n",
+    "rect = patches.Rectangle(pos, template.shape[1], template.shape[0], linewidth=2, edgecolor='r', facecolor='none')\n",
+    "ax.add_patch(rect)\n",
+    "plt.show()"
    ]
   }
  ],
