--- a/ATRIM/TP2/TP2-ATRIM-spatial-filtering-sv-2021-2022.ipynb
+++ b/ATRIM/TP2/TP2-ATRIM-spatial-filtering-sv-2021-2022.ipynb
@@ -195,6 +195,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "width=8\n",
+    "height=3\n",
+    "plt.rcParams['figure.figsize'] = [width, height]\n",
+    "\n",
+    "#creating and showing three mean kernels of different sizes\n",
+    "k = 1\n",
+    "for hs, sig in [(1, 1),(3, 2), (11, 1)]:\n",
+    "    plt.subplot(1,3,k)\n",
+    "    kernel = gaussianKernel(hs, sig)\n",
+    "    plt.imshow(kernel, vmin=0, vmax=0.2)\n",
+    "    plt.title('Gaussian')\n",
+    "    k+=1\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -231,27 +252,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Il faudrait un kernel différent pour chaque image mais comment les choisir ?\n",
-    "\n",
     "SUBDIR = os.path.join(IMDIR, \"smooth\")\n",
     "f = os.path.join(SUBDIR, \"grass.jpg\")\n",
     "\n",
     "width=10\n",
     "height=15\n",
     "\n",
-    "hs = 3\n",
-    "sigma = 0.1\n",
+    "hs1 = 2\n",
+    "hs2 = 4\n",
+    "hs3 = 8\n",
+    "sigma = 2\n",
     "\n",
     "im = io.imread(f, as_gray=True)\n",
     "im = im.astype(float)\n",
-    "kernel = gaussianKernel(hs, sigma)\n",
-    "im_filtered = ndimage.convolve(im,kernel)\n",
+    "kernel1 = gaussianKernel(hs1, sigma)\n",
+    "kernel2 = gaussianKernel(hs2, sigma)\n",
+    "kernel3 = gaussianKernel(hs3, sigma)\n",
+    "im_filtered1 = ndimage.convolve(im,kernel1)\n",
+    "im_filtered2 = ndimage.convolve(im,kernel2)\n",
+    "im_filtered3 = ndimage.convolve(im,kernel3)\n",
     "im_resized_1 = subsample(im, 1/2)\n",
-    "im_resized_2 = subsample(im_filtered, 1/2)\n",
+    "im_resized_2 = subsample(im_filtered1, 1/2)\n",
     "im_resized_3 = subsample(im, 1/4)\n",
-    "im_resized_4 = subsample(im_filtered, 1/4)\n",
+    "im_resized_4 = subsample(im_filtered2, 1/4)\n",
     "im_resized_5 = subsample(im, 1/8)\n",
-    "im_resized_6 = subsample(im_filtered, 1/8)\n",
+    "im_resized_6 = subsample(im_filtered3, 1/8)\n",
     "\n",
     "fig=plt.figure(figsize=(width, height))\n",
     "plt.subplot(4,2,1)        \n",
@@ -301,6 +326,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Expliquer comment choisir la taille du kernel, j'ai essayé en prenant un kernel de taille correspondante à celle du sampling mais je suis pas sûr...**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.3 Filtering with your own Convolution\n",
     "**a)** Repeat the smoothing above with your own implementation of the ```convolution``` function. The function should receive as input an image and a filter kernel (matrix of weights) and return the filtered image. Compare your results with those from the scikit in-built function.\n",
     "\n",
@@ -334,12 +366,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Code du dessus mais en utilisant myConvolve"
+    "**# Code de l'exercice d'avant à copier en remplaceant juste la fonction convolve, une fois avoir verifié l'histoire de taille du kernel..**"
    ]
   },
   {
@@ -349,7 +379,7 @@
     "On remarque les différences suivantes entre les 2 fonctions de convolution :\n",
     "\n",
     "* Notre implémentation a recourt à du zero padding mais par défaut la fonction built-in utilise un padding mirroir\n",
-    "* ..."
+    "* A COMPLETER"
    ]
   },
   {
@@ -456,7 +486,7 @@
     "* pour chaque image, les images obtenues par le calcul de norme du gradient et du laplacian sont similaires et approximent le contour de l'image originale\n",
     "* les composantes du gradient permettent d'observer la vitesse de changement de couleurs dans l'image selon les axes x et y\n",
     "* comme on peut le voir pour l'image `moon-blurred` par exemple, le gradient est assez sensible au bruit (même avec le filtre de Sobel)\n",
-    "* ..."
+    "* A COMPLETER"
    ]
   },
   {
@@ -507,7 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fonction à vérifier et cell à compléter ensuite pour répondre à la consigne\n",
+    "# fonction à vérifier et cellule à compléter ensuite pour répondre à la consigne\n",
     "\n",
     "from skimage.restoration import denoise_bilateral\n",
     "\n",
@@ -571,7 +601,6 @@
     "template = rescale(template, 0.3)\n",
     "\n",
     "def findTemplate(im, template):\n",
-    "    \"\"\"retourne la position du template dans l'image\"\"\"\n",
     "    h_target, w_target = im.shape\n",
     "    h_template, w_template = template.shape\n",
     "    \n",
@@ -604,6 +633,18 @@
     "ax.add_patch(rect)\n",
     "plt.axis('off')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On remarque que :\n",
+    "    \n",
+    "* Cette méthode necessite que la taille du template soit égale à celle du motif recherché dans l'image\n",
+    "* Le temps de calcul est très important étant donné une complexité en O(taille du template x taille de l'image)\n",
+    "* Cette méthode fonctionne uniquement pour les images en niveaux de gris\n",
+    "* A COMPLETER"
    ]
   }
  ],
