--- a/ATRIM/TP2/TP2_Yassine_Jamoud_Samy_Haffoudhi.ipynb
+++ b/ATRIM/TP2/TP2_Yassine_Jamoud_Samy_Haffoudhi.ipynb
@@ -186,12 +186,15 @@
    "outputs": [],
    "source": [
     "def gaussianKernel(hs,sig):\n",
-    "    u = v = np.arange(-hs, hs + 1)\n",
-    "    uu, vv = np.meshgrid(u, v)\n",
-    "    kernel = 1 / (2 * np.pi * sig**2) * np.exp(-(uu**2 + vv**2) / (2 * sig**2))\n",
-    "    kernel /= np.sum(kernel)\n",
-    "    \n",
-    "    return kernel"
+    "    u= np.linspace(-hs,hs,2*hs+1);\n",
+    "    v= np.linspace(-hs,hs,2*hs+1);\n",
+    "    uu,vv =np.meshgrid(u,v);  \n",
+    "    kernel=(1/(2*np.pi*sig**2))*np.exp(-(uu**2+vv**2)/(2*sig**2));\n",
+    "    kernel/=np.sum(kernel);\n",
+    "    plt.imshow(kernel, interpolation='Nearest');\n",
+    "    return kernel\n",
+    "\n",
+    "kernel = gaussianKernel(100,20);"
    ]
   },
   {
@@ -212,6 +215,7 @@
     "    plt.imshow(kernel, vmin=0, vmax=0.2)\n",
     "    plt.title('Gaussian')\n",
     "    k+=1\n",
+    "    \n",
     "plt.show()"
    ]
   },
@@ -241,9 +245,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def subsample(im, rate):\n",
-    "    im_resized = im[::int(1/rate),::int(1/rate)]\n",
-    "    return im_resized"
+    "SUBDIR = os.path.join(IMDIR, \"smooth\")\n",
+    "f = os.path.join(SUBDIR, \"grass.jpg\")\n",
+    "\n",
+    "width=15\n",
+    "height=5\n",
+    "\n",
+    "hs = 3\n",
+    "sigma = 0.5\n",
+    "\n",
+    "im = io.imread(f, as_gray=True)\n",
+    "im = im.astype(float)\n",
+    "im = resize(im,(100,100))    \n",
+    "kernel = gaussianKernel(hs,sigma)\n",
+    "im_filtered_scipy = ndimage.convolve(im,kernel)\n",
+    "\n",
+    "fig=plt.figure(figsize=(width, height))\n",
+    "\n",
+    "plt.subplot(1,2,1)        \n",
+    "plt.imshow(im, cmap = 'gray')\n",
+    "plt.title('Gaussian original')\n",
+    "                \n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(im_filtered_scipy, cmap = 'gray')\n",
+    "plt.title('Gaussian scipy conv')\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -252,81 +279,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SUBDIR = os.path.join(IMDIR, \"smooth\")\n",
-    "f = os.path.join(SUBDIR, \"grass.jpg\")\n",
-    "\n",
-    "width=10\n",
-    "height=15\n",
-    "\n",
-    "hs1 = 2\n",
-    "hs2 = 4\n",
-    "hs3 = 8\n",
+    "def subsampling(im,factor):\n",
+    "    im_sub=im[::factor,::factor]\n",
+    "    return im_sub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hs = 3\n",
     "sigma = 2\n",
     "\n",
     "im = io.imread(f, as_gray=True)\n",
     "im = im.astype(float)\n",
-    "kernel1 = gaussianKernel(hs1, sigma)\n",
-    "kernel2 = gaussianKernel(hs2, sigma)\n",
-    "kernel3 = gaussianKernel(hs3, sigma)\n",
-    "im_filtered1 = ndimage.convolve(im,kernel1)\n",
-    "im_filtered2 = ndimage.convolve(im,kernel2)\n",
-    "im_filtered3 = ndimage.convolve(im,kernel3)\n",
-    "im_resized_1 = subsample(im, 1/2)\n",
-    "im_resized_2 = subsample(im_filtered1, 1/2)\n",
-    "im_resized_3 = subsample(im, 1/4)\n",
-    "im_resized_4 = subsample(im_filtered2, 1/4)\n",
-    "im_resized_5 = subsample(im, 1/8)\n",
-    "im_resized_6 = subsample(im_filtered3, 1/8)\n",
+    "im = resize(im,(100,100))   \n",
+    "\n",
+    "kernel = gaussianKernel(hs,sigma)\n",
+    "im_filtered_scipy = ndimage.convolve(im,kernel)\n",
     "\n",
     "fig=plt.figure(figsize=(width, height))\n",
-    "plt.subplot(4,2,1)        \n",
+    "\n",
+    "plt.subplot(2,4,1)        \n",
     "plt.imshow(im, cmap = 'gray')\n",
-    "plt.title('Original')\n",
-    "        \n",
-    "plt.subplot(4,2,2)\n",
-    "plt.imshow(im_filtered, cmap = 'gray')\n",
-    "plt.title('Gaussian')\n",
+    "plt.title('Image original size')\n",
     "\n",
-    "plt.subplot(4,2,3)        \n",
-    "plt.imshow(im_resized_1, cmap = 'gray')\n",
-    "plt.title('Original 1/2')\n",
-    "        \n",
-    "plt.subplot(4,2,4)\n",
-    "plt.imshow(im_resized_2, cmap = 'gray')\n",
-    "plt.title('Gaussian 1/2')\n",
+    "plt.subplot(2,4,2)        \n",
+    "plt.imshow(subsampling(im,2), cmap = 'gray')\n",
+    "plt.title('Image original resize 1/2')\n",
     "\n",
-    "plt.subplot(4,2,5)        \n",
-    "plt.imshow(im_resized_3, cmap = 'gray')\n",
-    "plt.title('Original 1/4')\n",
-    "        \n",
-    "plt.subplot(4,2,6)\n",
-    "plt.imshow(im_resized_4, cmap = 'gray')\n",
-    "plt.title('Gaussian 1/4')\n",
+    "plt.subplot(2,4,3)        \n",
+    "plt.imshow(subsampling(im,4), cmap = 'gray')\n",
+    "plt.title('Image original resize 1/4')\n",
     "\n",
-    "plt.subplot(4,2,7)        \n",
-    "plt.imshow(im_resized_5, cmap = 'gray')\n",
-    "plt.title('Original 1/8')\n",
-    "        \n",
-    "plt.subplot(4,2,8)\n",
-    "plt.imshow(im_resized_6, cmap = 'gray')\n",
-    "plt.title('Gaussian 1/8')\n",
-    "            \n",
-    "# plt.subplot(1,4,3)\n",
-    "# plt.imshow(im_filtered_scipy, cmap = 'gray')\n",
-    "# plt.title('Gaussian scipy conv')\n",
+    "plt.subplot(2,4,4)        \n",
+    "plt.imshow(subsampling(im,8), cmap = 'gray')\n",
+    "plt.title('Image original resize 1/8')\n",
     "\n",
-    "# plt.subplot(1,4,4)\n",
-    "# plt.imshow(np.abs(im_filtered_scipy-im_filtered), cmap = 'gray')# \n",
-    "# plt.title('Difference')\n",
+    "plt.subplot(2,4,5)        \n",
+    "plt.imshow(im_filtered_scipy, cmap = 'gray')\n",
+    "plt.title('Gaussian original')\n",
     "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Expliquer comment choisir la taille du kernel, j'ai essayé en prenant un kernel de taille correspondante à celle du sampling mais je suis pas sûr...**"
+    "plt.subplot(2,4,6)        \n",
+    "plt.imshow(subsampling(im_filtered_scipy,2), cmap = 'gray')\n",
+    "plt.title('Gaussian resize 1/2')\n",
+    "\n",
+    "plt.subplot(2,4,7)        \n",
+    "plt.imshow(subsampling(im_filtered_scipy,4), cmap = 'gray')\n",
+    "plt.title('Gaussian resize 1/4')\n",
+    "\n",
+    "plt.subplot(2,4,8)        \n",
+    "plt.imshow(subsampling(im_filtered_scipy,8), cmap = 'gray')\n",
+    "plt.title('Gaussian resize 1/8')\n",
+    "\n",
+    "plt.tight_layout()       "
    ]
   },
   {
@@ -351,25 +359,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def myConvolve(im, kernel):\n",
-    "    hs = kernel.shape[0] // 2\n",
-    "    h, w = im.shape\n",
-    "    res = np.pad(im, hs)\n",
-    "    for x in range(h):\n",
-    "        for y in range(w):\n",
-    "            s = 0\n",
-    "            for u in range(-hs, hs + 1):\n",
-    "                for v in range(-hs, hs + 1):\n",
-    "                    s += kernel[u + hs, v + hs] * res[x - u + hs, y - v + hs]\n",
-    "            res[x, y] = s\n",
-    "    return res"
+    "def myConvolution(im,kernel):\n",
+    "    im_ref=im.copy\n",
+    "    hs=int((kernel.shape[1]-1)/2)\n",
+    "    x,y=im.shape;\n",
+    "    im_filtered=np.zeros((x,y));\n",
+    "    im_ref=np.pad(im,hs)\n",
+    "    for i in range(x):\n",
+    "        for j in range(y):\n",
+    "            im_filtered[i,j]=0\n",
+    "            for u in range(-hs,hs):\n",
+    "                for v in range(-hs,hs):\n",
+    "                    im_filtered[i,j]+= (kernel[u+hs,v+hs]*im_ref[i+hs-u,j+hs-v])\n",
+    "    return im_filtered"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "**# Code de l'exercice d'avant à copier en remplaceant juste la fonction convolve, une fois avoir verifié l'histoire de taille du kernel..**"
+    "SUBDIR = os.path.join(IMDIR, \"smooth\")\n",
+    "f = os.path.join(SUBDIR, \"grass.jpg\")\n",
+    "\n",
+    "width=20\n",
+    "height=20\n",
+    "\n",
+    "hs = 3\n",
+    "sigma = 2\n",
+    "\n",
+    "im = io.imread(f, as_gray=True)\n",
+    "im = im.astype(float)\n",
+    "im = resize(im,(100,100))   \n",
+    "\n",
+    "kernel = gaussianKernel(hs,sigma)\n",
+    "im_filtered_scipy = ndimage.convolve(im,kernel)\n",
+    "\n",
+    "fig=plt.figure(figsize=(width, height))\n",
+    "\n",
+    "im_filtered=myConvolution(im,kernel)\n",
+    "\n",
+    "plt.subplot(1,4,1)\n",
+    "plt.imshow(im, cmap = 'gray')\n",
+    "plt.title('Original')\n",
+    "\n",
+    "plt.subplot(1,4,2)\n",
+    "plt.imshow(im_filtered, cmap = 'gray')\n",
+    "plt.title('Gaussian own conv')\n",
+    "\n",
+    "plt.subplot(1,4,3)\n",
+    "plt.imshow(im_filtered_scipy, cmap = 'gray')\n",
+    "plt.title('Gaussian scipy conv')\n",
+    "\n",
+    "plt.subplot(1,4,4)\n",
+    "plt.imshow(im_filtered_scipy-im_filtered, cmap = 'gray')\n",
+    "plt.title('Gaussian Difference')"
    ]
   },
   {
@@ -379,7 +424,9 @@
     "On remarque les différences suivantes entre les 2 fonctions de convolution :\n",
     "\n",
     "* Notre implémentation a recourt à du zero padding mais par défaut la fonction built-in utilise un padding mirroir\n",
-    "* A COMPLETER"
+    "* La fonction python est mieux implementer que la notre, il n'y a pas d'effet de bords\n",
+    "* python optimise mieux les calculs\n",
+    "* En effet la convolution peut être implementée sous forme d'un calcul matriciel plutôt qu'une suite de for"
    ]
   },
   {
@@ -485,8 +532,20 @@
     "\n",
     "* pour chaque image, les images obtenues par le calcul de norme du gradient et du laplacian sont similaires et approximent le contour de l'image originale\n",
     "* les composantes du gradient permettent d'observer la vitesse de changement de couleurs dans l'image selon les axes x et y\n",
-    "* comme on peut le voir pour l'image `moon-blurred` par exemple, le gradient est assez sensible au bruit (même avec le filtre de Sobel)\n",
-    "* A COMPLETER"
+    "* comme on peut le voir pour l'image `moon-blurred` par exemple, le gradient est assez sensible aux détails de l'image\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def laplacianEnhance(im,c):\n",
+    "    kernelL =generateLaplacianKernel()\n",
+    "    laplaceImg=ndimage.convolve(im,kernelL)\n",
+    "    im_sharp = im+c*laplaceImg\n",
+    "    return im_sharp"
    ]
   },
   {
@@ -498,24 +557,33 @@
     "def scale(im):\n",
     "    return 255 / (np.max(im) - np.min(im)) * (im - np.min(im))\n",
     "\n",
-    "def sharpen(im):\n",
-    "    im_laplacian = laplacian(im)\n",
-    "    im_filtered = im - im_laplacian\n",
-    "    return scale(im_filtered)\n",
-    "\n",
-    "width=5\n",
-    "height=5\n",
-    "fig=plt.figure(figsize=(width, height))\n",
-    "plt.axis('off')\n",
-    "plt.title('Sharpened moon image')\n",
-    "\n",
     "SUBDIR = os.path.join(IMDIR, \"enhance\")\n",
     "f = os.path.join(SUBDIR, \"moon-blurred.tif\")\n",
     "\n",
-    "im = io.imread(f, as_gray=True)\n",
+    "width=20\n",
+    "height=20\n",
     "\n",
-    "im_sharpened = sharpen(im)\n",
-    "plt.imshow(im_sharpened, cmap='gray')\n",
+    "hs = 3\n",
+    "sigma = 2\n",
+    "\n",
+    "im = io.imread(f, as_gray=True)\n",
+    "im = im.astype(float)\n",
+    "#im = resize(im,(100,100))\n",
+    "\n",
+    "im_enhance=laplacianEnhance(im,-1)\n",
+    "im_enhance_normalized = (im_enhance-np.min(im_enhance))*((np.max(im)-np.min(im))/(np.max(im_enhance)-np.min(im_enhance)))\n",
+    "\n",
+    "plt.subplot(1,3,1)\n",
+    "plt.imshow(im, cmap = 'gray')\n",
+    "plt.title('Original image')\n",
+    "\n",
+    "plt.subplot(1,3,2)\n",
+    "plt.imshow(im_enhance, cmap = 'gray')\n",
+    "plt.title('Enhanced image')\n",
+    "\n",
+    "plt.subplot(1,3,3)\n",
+    "plt.imshow(im_enhance_normalized, cmap = 'gray')\n",
+    "plt.title('Enhanced image normalized')\n",
     "\n",
     "plt.show()"
    ]
@@ -537,33 +605,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fonction à vérifier et cellule à compléter ensuite pour répondre à la consigne\n",
-    "\n",
+    "def compute_kernel_depend(im_ref,i,j,u,v,sig2,hs):\n",
+    "    kernel = np.zeros((2*hs+1,2*hs+1));\n",
+    "    for u in range(-hs,hs):\n",
+    "        for v in range(-hs,hs):\n",
+    "            kernel[u,v] = (1/(2*np.pi*sig2**2))*np.exp(-1*(im_ref[i+u,j+v]-im_ref[i,j])**2/(2*sig2**2))\n",
+    "    return kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bilateral(im, hs, sig1, sig2):\n",
+    "    im_ref=im.copy\n",
+    "    x,y=im.shape;\n",
+    "    im_filtered=np.zeros((x,y));\n",
+    "    im_ref=np.pad(im,hs)\n",
+    "    kernel_gauss = gaussianKernel(hs,sig1)\n",
+    "    for i in range(x):\n",
+    "        for j in range(y):\n",
+    "            im_filtered[i,j]=0\n",
+    "            for u in range(-hs,hs):\n",
+    "                for v in range(-hs,hs):\n",
+    "                    kernel_content= compute_kernel_depend(im_ref,i,j,u,v,sig2,hs)\n",
+    "                    kernel_content/=np.sum(kernel_content);\n",
+    "                    kernel = kernel_gauss*kernel_content\n",
+    "                    im_filtered[i,j]+= (kernel[u+hs,v+hs]*im_ref[i+hs-u,j+hs-v])\n",
+    "    return im_filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from skimage.restoration import denoise_bilateral\n",
     "\n",
-    "def bilateral(im, hs, sig1, sig2):\n",
-    "    w1 = gaussianKernel(hs, sig1)\n",
-    "    h, w = im.shape\n",
-    "    res = np.pad(im, hs)\n",
-    "    for x in range(h):\n",
-    "        for y in range(w):\n",
-    "            s = 0\n",
-    "            for u in range(-hs, hs + 1):\n",
-    "                for v in range(-hs, hs + 1):\n",
-    "                    w2 = 1 / (2 * np.pi * (sig2 ** 2)) * np.exp(-(res[x + u + hs, y + v + hs] - res[u, v]) ** 2 / (2 * (sig2 ** 2)))\n",
-    "                    s += w1[u + hs, v + hs] * w2 * res[x - u + hs, y - v + hs]\n",
-    "            res[x, y] = s\n",
-    "            \n",
-    "    return res\n",
+    "width=50\n",
+    "height=50\n",
+    "\n",
     "\n",
     "SUBDIR = os.path.join(IMDIR, \"denoise\")\n",
-    "f = os.path.join(SUBDIR, \"monas-one.jpg\")\n",
+    "f = os.path.join(SUBDIR, \"taj.jpg\")\n",
     "\n",
     "im = io.imread(f, as_gray=True)\n",
     "im = im.astype(float)\n",
-    "im_denoised = denoise_bilateral(im, sigma_color=0.05, sigma_spatial=0.1)\n",
+    "fig=plt.figure(figsize=(width, height))\n",
+    "im = resize(im,(100,100))\n",
     "\n",
+    "my_im_denoised = bilateral(im,3,0.05,15)\n",
+    "im_denoised = denoise_bilateral(im, sigma_color=0.05, sigma_spatial=15)\n",
+    "\n",
+    "plt.subplot(1,3,1)\n",
+    "plt.imshow(im, cmap='gray')\n",
+    "plt.title('original')\n",
+    "plt.subplot(1,3,2)\n",
     "plt.imshow(im_denoised, cmap='gray')\n",
+    "plt.title('denoise scikit')\n",
+    "plt.subplot(1,3,3)\n",
+    "plt.imshow(my_im_denoised, cmap='gray')\n",
+    "plt.title('homemade bilateral')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -597,6 +703,7 @@
     "\n",
     "im = io.imread(f1, as_gray=True)\n",
     "template = io.imread(f2, as_gray=True)\n",
+    "# on rescale l'image pour reduire les calculs\n",
     "im = rescale(im, 0.3)\n",
     "template = rescale(template, 0.3)\n",
     "\n",
@@ -640,11 +747,10 @@
    "metadata": {},
    "source": [
     "On remarque que :\n",
-    "    \n",
+    "\n",
     "* Cette méthode necessite que la taille du template soit égale à celle du motif recherché dans l'image\n",
     "* Le temps de calcul est très important étant donné une complexité en O(taille du template x taille de l'image)\n",
-    "* Cette méthode fonctionne uniquement pour les images en niveaux de gris\n",
-    "* A COMPLETER"
+    "* Cette méthode fonctionne uniquement pour les images en niveaux de gris"
    ]
   }
  ],
