--- a/packages/preamble.sty
+++ b/packages/preamble.sty
@@ -24,7 +24,7 @@
     basicstyle=\footnotesize,        % the size of the fonts that are used for the code
     breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
     breaklines=true,                 % sets automatic line breaking
-    commentstyle=\color{mygreen},    % comment style
+    commentstyle=\color{mymauve},    % comment style
     deletekeywords={...},            % if you want to delete keywords from the given language
     escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
     extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
@@ -39,7 +39,7 @@
     showstringspaces=false,          % underline spaces within strings only
     showtabs=false,                  % show tabs within strings adding particular underscores
     stepnumber=1,                    % the step between two line-numbers. If it's 1, each line will be numbered
-    stringstyle=\color{mymauve},     % string literal style
+    stringstyle=\color{mygreen},     % string literal style
     tabsize=2,	                   % sets default tabsize to 2 spaces
 }
 
