--- a/ARSIG/TP2/rapport/rapport.tex
+++ b/ARSIG/TP2/rapport/rapport.tex
@@ -106,6 +106,22 @@ $x_5$ à $x_2$ bruité et $x_6$ à $x_3$ bruité) :
 
 \section{Détection et reconstruction d'une partition musicale}
 
+\begin{enumerate}
+
+    \item{On charge le fichier à l'aide de la fonction \texttt{audioread} de matlab}
+
+    \item{Représentons l'allure temporelle et le spectrogramme en échelle logarithmique de ce signal :
+
+        }
+
+    \item{}
+
+    \item{}
+
+    \item{}
+
+\end{enumerate}
+
 \begin{appendices}
 
     \section{Scripts Représentation temps-fréquence de signaux simulés}
