--- a/ARSIG/TP2/rapport/rapport.tex
+++ b/ARSIG/TP2/rapport/rapport.tex
@@ -117,10 +117,10 @@ On remarque que les problèmes de résolutions des petites fenêtres et grande f
 
     \item{Représentons l'allure temporelle et le spectrogramme en échelle logarithmique de ce signal :
 	\begin{figure}[H]
-   		 \caption{Allure temporelle }
-  		  \includegraphics[width=\textwidth]{%ACOMPLETER%}
-    	\centering
-\end{figure}
+   		\caption{Allure temporelle et spectrogramme }
+        \includegraphics[width=\textwidth]{ex2}
+        \centering
+    \end{figure}
         }
 
     \item{On peut ensuite calculer pour un temps tau la différence du contenue frequentiel entre tau et tau +1 en mesurant un indice de stationnarité.}
@@ -132,11 +132,11 @@ On remarque que les problèmes de résolutions des petites fenêtres et grande f
     \item{On obtient alors la liste de notes suivante :
     \begin{figure}[H]
     	\caption{Liste de notes obtenues}
-    	\includegraphics[width=\textwidth]{%A COMPELTER}
-    \centering
-\end{figure}}
+    	\includegraphics[width=0.1\textwidth]{notes}
+        \centering
+    \end{figure}}
     
-    \item{On peut finalement, envoyer cette liste de note ainsi que le temps préalablement calculer de chaque note à une fonction genere_morceau pour reconstituer notre mélodie}
+\item{On peut finalement, envoyer cette liste de note ainsi que le temps préalablement calculé de chaque note à une fonction \texttt{genere\_morceau} pour reconstituer notre mélodie.}
 
 \end{enumerate}
 
