--- a/ATRIM/TP3/TP3-frequency-domain-2021sv.ipynb
+++ b/ATRIM/TP3/TP3-frequency-domain-2021sv.ipynb
@@ -246,7 +246,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A FAIRE : b) Représenter la forme des filtres dans des subplots pour différentes valeurs de D comme dans les anciens TP "
+    "fig=plt.figure(figsize=(5, 9))\n",
+    "\n",
+    "D_values = [3, 10, 15]\n",
+    "\n",
+    "counter = 1\n",
+    "\n",
+    "for D in D_values:\n",
+    "    f_ideal = lowpass_filter(D, (40, 40))\n",
+    "    f_gauss = lowpass_filter(D, (40, 40), 'gauss')\n",
+    "    \n",
+    "    plt.subplot(3,2,counter)\n",
+    "    plt.imshow(f_ideal, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    plt.title(f'Ideal D = {D}')\n",
+    "    \n",
+    "    plt.subplot(3,2,counter+1)\n",
+    "    plt.imshow(f_gauss, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    plt.title(f'Gauss D = {D}')\n",
+    "    \n",
+    "    counter += 2\n",
+    "    \n",
+    "plt.show()"
    ]
   },
   {
@@ -359,7 +381,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous observons alors à l'aide des différentes images ci-dessus que les filtres Gaussiens permettent bien d'éliminer les artefacts sur l'image, par exemple les lignes verticales sur le côté gauche du visage"
+    "* Nous observons alors à l'aide des différentes images ci-dessus que les filtres Gaussiens permettent bien d'éliminer les artefacts sur l'image, par exemple les lignes verticales sur le côté gauche du visage\n",
+    "* Après application d'un filtre passe haut la composante continue est supprimée"
    ]
   },
   {
@@ -374,7 +397,6 @@
     "    im_padded[0:N,0:M] = im\n",
     "    im_fft = np.fft.fft2(im_padded)\n",
     "    im_fft = np.fft.fftshift(im_fft)\n",
-    "    print(np.min(np.abs(im_fft)))\n",
     "    res_fft = f * im_fft\n",
     "    res = np.fft.ifft2(np.fft.ifftshift(res_fft))\n",
     "    res = np.real(res)\n",
@@ -389,10 +411,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A FAIRE : compléter ça en utilisant la fonction juste au dessus en passant les bons filtres en arguments\n",
-    "\n",
     "SUBDIR = os.path.join(IMDIR, \"Frequency\")\n",
-    "fig = plt.figure(figsize=(20, 36))\n",
+    "fig = plt.figure(figsize=(30, 36))\n",
     "\n",
     "# tower\n",
     "\n",
@@ -400,7 +420,8 @@
     "im = io.imread(f, as_gray=True)\n",
     "im = im.astype(float)\n",
     "\n",
-    "# f_denoise = ???\n",
+    "H, W = im.shape\n",
+    "f_denoise = lowpass_filter(60, (2*H, 2*W), 'gauss') # La ligne à changer \n",
     "res = apply_filter(im, f_denoise)\n",
     "\n",
     "plt.subplot(6,4,1)\n",
@@ -425,7 +446,133 @@
     "plt.axis('off')\n",
     "plt.title('Filtered Frequency')\n",
     "\n",
-    "# Pareil pour les autres images ...\n",
+    "# face 1\n",
+    "\n",
+    "f = os.path.join(SUBDIR, \"face1.jpg\")\n",
+    "im = io.imread(f, as_gray=True)\n",
+    "im = im.astype(float)\n",
+    "\n",
+    "H, W = im.shape\n",
+    "f_denoise = lowpass_filter(80, (2*H, 2*W), 'gauss') # La ligne à changer \n",
+    "res = apply_filter(im, f_denoise)\n",
+    "\n",
+    "plt.subplot(6,4,5)\n",
+    "plt.imshow(im, cmap = 'gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Original')\n",
+    "\n",
+    "plt.subplot(6,4,6)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Filtered Spatial')\n",
+    "\n",
+    "plt.subplot(6,4,7)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.imshow(np.log(np.abs(np.fft.fftshift(np.fft.fft2(im)))), cmap='gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Original Frequency')\n",
+    "\n",
+    "plt.subplot(6,4,8)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.imshow(np.log(np.abs(np.fft.fftshift(np.fft.fft2(res)))), cmap='gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Filtered Frequency')\n",
+    "\n",
+    "# face 2\n",
+    "\n",
+    "f = os.path.join(SUBDIR, \"face2.jpg\")\n",
+    "im = io.imread(f, as_gray=True)\n",
+    "im = im.astype(float)\n",
+    "\n",
+    "H, W = im.shape\n",
+    "f_denoise = lowpass_filter(60, (2*H, 2*W)) # La ligne à changer \n",
+    "res = apply_filter(im, f_denoise)\n",
+    "\n",
+    "plt.subplot(6,4,9)\n",
+    "plt.imshow(im, cmap = 'gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Original')\n",
+    "\n",
+    "plt.subplot(6,4,10)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Filtered Spatial')\n",
+    "\n",
+    "plt.subplot(6,4,11)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.imshow(np.log(np.abs(np.fft.fftshift(np.fft.fft2(im)))), cmap='gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Original Frequency')\n",
+    "\n",
+    "plt.subplot(6,4,12)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.imshow(np.log(np.abs(np.fft.fftshift(np.fft.fft2(res)))), cmap='gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Filtered Frequency')\n",
+    "\n",
+    "# Astronaut\n",
+    "\n",
+    "f = os.path.join(SUBDIR, \"astronaut-interference.tif\")\n",
+    "im = io.imread(f, as_gray=True)\n",
+    "im = im.astype(float)\n",
+    "\n",
+    "H, W = im.shape\n",
+    "f_denoise = np.ones((2 * H, 2 * W)) # La ligne à changer \n",
+    "res = apply_filter(im, f_denoise)\n",
+    "\n",
+    "plt.subplot(6,4,13)\n",
+    "plt.imshow(im, cmap = 'gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Original')\n",
+    "\n",
+    "plt.subplot(6,4,14)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Filtered Spatial')\n",
+    "\n",
+    "plt.subplot(6,4,15)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.imshow(np.log(np.abs(np.fft.fftshift(np.fft.fft2(im)))), cmap='gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Original Frequency')\n",
+    "\n",
+    "plt.subplot(6,4,16)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.imshow(np.log(np.abs(np.fft.fftshift(np.fft.fft2(res)))), cmap='gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Filtered Frequency')\n",
+    "\n",
+    "# Text\n",
+    "\n",
+    "f = os.path.join(SUBDIR, \"text-spotshade.tif\")\n",
+    "im = io.imread(f, as_gray=True)\n",
+    "im = im.astype(float)\n",
+    "\n",
+    "H, W = im.shape\n",
+    "f_denoise = np.ones((2 * H, 2 * W)) # La ligne à changer \n",
+    "res = apply_filter(im, f_denoise)\n",
+    "\n",
+    "plt.subplot(6,4,17)\n",
+    "plt.imshow(im, cmap = 'gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Original')\n",
+    "\n",
+    "plt.subplot(6,4,18)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Filtered Spatial')\n",
+    "\n",
+    "plt.subplot(6,4,19)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.imshow(np.log(np.abs(np.fft.fftshift(np.fft.fft2(im)))), cmap='gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Original Frequency')\n",
+    "\n",
+    "plt.subplot(6,4,20)\n",
+    "plt.imshow(res, cmap = 'gray')\n",
+    "plt.imshow(np.log(np.abs(np.fft.fftshift(np.fft.fft2(res)))), cmap='gray')\n",
+    "plt.axis('off')\n",
+    "plt.title('Filtered Frequency')\n",
     "\n",
     "plt.show()"
    ]
