--- a/ATRIM/TP3/TP3-frequency-domain-2021sv.ipynb
+++ b/ATRIM/TP3/TP3-frequency-domain-2021sv.ipynb
@@ -381,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Nous observons alors à l'aide des différentes images ci-dessus que les filtres Gaussiens permettent bien d'éliminer les artefacts sur l'image, par exemple les lignes verticales sur le côté gauche du visage\n",
+    "* Nous observons alors à l'aide des différentes images ci-dessus que les filtres Gaussiens permettent bien d'éliminer les artefacts sur l'image, par exemple les lignes verticales sur le côté gauche du visage. Ils sont dus aux variation brusques de la fonction de transfert, le filtre gaussien permet de remédier à ce problème.\n",
     "* Après application d'un filtre passe haut la composante continue est supprimée"
    ]
   },
@@ -421,7 +421,7 @@
     "im = im.astype(float)\n",
     "\n",
     "H, W = im.shape\n",
-    "f_denoise = lowpass_filter(60, (2*H, 2*W), 'gauss') # La ligne à changer \n",
+    "f_denoise = np.ones((2*H, 2*W)) # à remplacer par le filtre adapté\n",
     "res = apply_filter(im, f_denoise)\n",
     "\n",
     "plt.subplot(6,4,1)\n",
@@ -453,7 +453,7 @@
     "im = im.astype(float)\n",
     "\n",
     "H, W = im.shape\n",
-    "f_denoise = lowpass_filter(80, (2*H, 2*W), 'gauss') # La ligne à changer \n",
+    "f_denoise = lowpass_filter(80, (2*H, 2*W), 'gauss')\n",
     "res = apply_filter(im, f_denoise)\n",
     "\n",
     "plt.subplot(6,4,5)\n",
@@ -485,7 +485,7 @@
     "im = im.astype(float)\n",
     "\n",
     "H, W = im.shape\n",
-    "f_denoise = lowpass_filter(60, (2*H, 2*W)) # La ligne à changer \n",
+    "f_denoise = lowpass_filter(60, (2*H, 2*W))\n",
     "res = apply_filter(im, f_denoise)\n",
     "\n",
     "plt.subplot(6,4,9)\n",
@@ -517,7 +517,7 @@
     "im = im.astype(float)\n",
     "\n",
     "H, W = im.shape\n",
-    "f_denoise = np.ones((2 * H, 2 * W)) # La ligne à changer \n",
+    "f_denoise = np.ones((2 * H, 2 * W))\n",
     "res = apply_filter(im, f_denoise)\n",
     "\n",
     "plt.subplot(6,4,13)\n",
@@ -549,7 +549,7 @@
     "im = im.astype(float)\n",
     "\n",
     "H, W = im.shape\n",
-    "f_denoise = np.ones((2 * H, 2 * W)) # La ligne à changer \n",
+    "f_denoise = np.ones((2 * H, 2 * W))\n",
     "res = apply_filter(im, f_denoise)\n",
     "\n",
     "plt.subplot(6,4,17)\n",
@@ -581,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A FAIRE : Expliquer comment t'as choisi le filtre pour chaque image"
+    "Pour chaque image dont nous souhaitons enlever le bruit, nous recherchons sur la transformée de Fourier les composantes responsables du bruit et nous concevons un filtre ayant pour effet d'annuler ces composantes. Nous ne sommes cependant pas parvenu à obtenir des résultats satisfaisant en pratique et nous avons alors juste conservé la structure dans code dans la cell ci-dessus."
    ]
   },
   {
